Fix commented after reivew (#86)
* REFACTOR: Refactor format accordion

* REFACTOR: Refactor format accordion

* REFACTOR: Refactor format accordion

* Fix comment

* Fix comment : Update variable

* Fix comment : Update variable

* Fix comment : Update px unit into rem

* Fix comment : html5 tags in sync

* Update imgx to imgs

* Update img /imgs

* #86 Feat : Update unit (Px to rem)

* #86 Feat : Update checklist

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./img/logo.png" alt="logo">
+          <img src="./images/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
    main
   --------------------->
   <main class="blog-page">
-    <section class="main-introduce pt-3 pt-lg-5">
+    <nav class="main-introduce pt-3 pt-lg-5">
       <div class="container">
         <h1 class="text-black display-1 pb-3 pb-lg-5">New and insights <br>
           <span class="text-black-50">form our experts</span>
@@ -82,7 +82,7 @@
             <li class="nav-item item nav-text nav-mark " role="presentation">
               <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">All Articles
               </button>
-              <img class=shape src="./img/header__Shape.png" alt="icon shape">
+              <img class=shape src="./images/arrow-down.png" alt="icon shape">
             </li>
             <li class="nav-item item nav-text" role="presentation">
               <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
@@ -112,7 +112,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </nav>
     <!-- service -->
     <section class="service pt-3 pt-lg-5">
       <div class="container">
@@ -135,10 +135,10 @@
           <div class="service-right col-12 col-md-6">
             <picture>
               <!-- mobile -->
-              <source media="(max-width:768px)" srcset="./img/service_img-0.5.jpg">
+              <source media="(max-width:768px)" srcset="./images/service@0.5x.jpg">
               <!-- desktop -->
-              <source media="(min-width:768px)" srcset="./img/service_img-1.5.jpg">
-              <img src="./img/service_img-0.5.jpg" alt="This is the service's photo" class="service-img"
+              <source media="(min-width:768px)" srcset="./images/service@1.5x.jpg">
+              <img src="./images/service@0.5x.jpg" alt="This is the service's photo" class="service-img"
                 sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
             </picture>
           </div>
@@ -155,10 +155,10 @@
               <h3 class="card-header">New</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img1-0.5.jpg ">
+                <source media="(max-width:768px)" srcset="./images/product-1@0.5x.jpg ">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img1-1.5.jpg ">
-                <img src="./img/product_img1-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-1@1.5x.jpg ">
+                <img src="./images/product-1@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -176,10 +176,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-2@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
-                <img src="./img/product_img2-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-2@1.5x.jpg ">
+                <img src="./images/product-2@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -197,10 +197,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img3-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-3@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img3-1.5.jpg ">
-                <img src="./img/product_img3-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-3@1.5x.jpg ">
+                <img src="./images/product-3@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -218,10 +218,10 @@
               <h3 class="card-header">Sales</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img4-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-4@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img4-1.5.jpg ">
-                <img src="./img/product_img4-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-4@1.5x.jpg ">
+                <img src="./images/product-4@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -239,10 +239,10 @@
               <h3 class="card-header">Product</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img5-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-5@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img5-1.5.jpg ">
-                <img src="./img/product_img5-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-5@1.5x.jpg ">
+                <img src="./images/product-5@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -260,10 +260,10 @@
               <h3 class="card-header">Product</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img6-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-6@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img6-1.5.jpg ">
-                <img src="./img/product_img6-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-6@1.5x.jpg ">
+                <img src="./images/product-6@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -288,10 +288,10 @@
               <h3 class="card-header">Marketing</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/marketing-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/marketing-0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/marketing-1.5.jpg ">
-                <img src="./img/marketing-0.5.jpg" alt="Here is a photo of the marketing title above"
+                <source media="(min-width:768px)" srcset="./images/marketing-1.5x.jpg ">
+                <img src="./images/marketing-0.5x.jpg" alt="Here is a photo of the marketing title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -370,10 +370,10 @@
               <h3 class="card-header">SERVICE</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img7-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-7@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img7-1.5.jpg ">
-                <img src="./img/product_img7-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-7@1.5x.jpg ">
+                <img src="./images/product-7@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -391,10 +391,10 @@
               <h3 class="card-header">SALES</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img8-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-8@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img8-1.5.jpg ">
-                <img src="./img/product_img8-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-8@1.5x.jpg ">
+                <img src="./images/product-8@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -412,10 +412,10 @@
               <h3 class="card-header">SERVICE</h3>
               <picture>
                 <!-- mobile -->
-                <source media="(max-width:768px)" srcset="./img/product_img9-0.5.jpg">
+                <source media="(max-width:768px)" srcset="./images/product-9@0.5x.jpg">
                 <!-- desktop -->
-                <source media="(min-width:768px)" srcset="./img/product_img9-1.5.jpg ">
-                <img src="./img/product_img9-0.5.jpg" alt="Here is a photo of the product title above"
+                <source media="(min-width:768px)" srcset="./images/product-9@1.5x.jpg ">
+                <img src="./images/product-9@0.5x.jpg" alt="Here is a photo of the product title above"
                   class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               </picture>
               <div class="card-body">
@@ -469,7 +469,7 @@
         </div>
       </section>
       <!-- navigation -->
-      <section class="navigation mt-5">
+      <nav class="navigation mt-5">
         <div class="container">
           <!-- link -->
           <div class="row row-cols-lg-3">
@@ -478,7 +478,7 @@
               <div class="card p-0">
                 <div class="card-header mt-3 mt-lg-0">
                   <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
+                    <img src="./images/logo.png" alt="logo">
                   </a>
                 </div>
                 <div class="card-body mt-3">
@@ -489,13 +489,13 @@
                 <div class="card-footer mt-3">
                   <ul class="d-flex ">
                     <li>
-                      <a class="me-3" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above"></a>
+                      <a class="me-3" href="https://twitter.com/"><img src="./images/media-Twitter.png" alt="Here is a logo of the media above"></a>
                     </li>
                     <li>
-                      <a class="me-3" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above"></a>
+                      <a class="me-3" href="https://www.facebook.com/"> <img src="./images/media-Facebook.png" alt="Here is a logo of the media above"></a>
                     </li>
                     <li>
-                      <a href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above"></a>
+                      <a href="https://www.linkedin.com/"> <img src="./images/media-Linkedin.png" alt="Here is a logo of the media above"></a>
                     </li>
                   </ul>
                 </div>
@@ -574,7 +574,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </nav>
     </footer>
     <!-------------------
          footer end
