--- a/practice-03/pricing.html
+++ b/practice-03/pricing.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
   <!-- index CSS -->
   <link rel="stylesheet" href="./styles/index.css" />
+  <link rel="stylesheet" href="./styles/pages/pricing.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
         <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
-          <img src="./img/logo.png" alt="logo">
+          <img src="./images/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-label="Open canvas" aria-controls="offcanvasNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -68,20 +69,20 @@
   <!-------------------
      main
     --------------------->
-    <main class="pricing-page">
-      <!-- introduce -->
-      <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
-          <div class="container">
-              <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
-                  <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
-                      <a class="text-black" href="#">Choose the right plan for your business</a>
-                  </h1>
-                  <p class="fs-6 col-lg-3 pn-5 pb-lg-0">
-                      Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
-                  </p>
-              </div>
-          </div>
-      </section>
+  <main class="pricing-page">
+    <!-- introduce -->
+    <section class="main-introduce pt-3 pt-lg-5 pb-3 pb-lg-4">
+        <div class="container">
+            <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end" tabindex="-1">
+                <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
+                    <a class="text-black" href="#">Choose the right plan for your business</a>
+                </h1>
+                <p class="fs-6 col-lg-3 pb-lg-0">
+                    Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch between plans at any time.
+                </p>
+            </div>
+        </div>
+    </section>
     <!--Choose type plan  -->
     <section class="package pt-3 pt-lg-5 pb-3">
       <!-- plan-card -->
@@ -113,49 +114,49 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>2 team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>1,000 Contacts & Companies</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Nodes Per Campaign</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>3 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Marketing Automation
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Custom Deal Tracks
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
@@ -169,7 +170,7 @@
               <div class="card-header mt-2 py-3">
                 <h3 class="my-0 display-3">Professional
                   <span class="badge bg-success bg-opacity-10 text-uppercase fs-6"
-                    style="color: var(--alienated)">Recommended
+                    style="color: var(--primary)">Recommended
                   </span>
                 </h3>
                 <p class="mt-2 fs-5">
@@ -192,45 +193,45 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>2,500 Contacts & Companies</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Nodes Per Campaigns</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>5 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>3 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Custom Deal Tracks</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Automated Voicemails
                     </p>
                   </li>
                   <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p class="text-decoration-line-through text-black-50">
                       Post-call Automation
                     </p>
@@ -263,43 +264,43 @@
               <div class="card-footer">
                 <ul class="list mt-3 mb-4">
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Unlimited team members</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>25 Campaign Workflows</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>20 Nodes Per Campaigns</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>15 Automation Rules (Triggers)</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>10 Plugins/Integrations</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Marketing Automation</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Custom Deal Tracks</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Automated Voicemails</p>
                   </li>
                   <li class="mb-3 d-flex align-items-center">
-                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--alienated)"></i>
+                    <i class="bi bi-check2 fs-1 me-2" style="color: var(--primary)"></i>
                     <p>Post-call Automation</p>
                   </li>
                 </ul>
@@ -396,8 +397,8 @@
               </div>
           </article>
         </div>
-    </div>
-  </section>
+      </div>
+    </section>
   </main>
 
   <!-------------------
@@ -415,7 +416,7 @@
         <div class="row row-cols-lg-2 d-lg-flex align-items-center justify-content-center">
           <div class="col-12 col-lg-7">
             <div class="cta-content p-5 p-lg-0">
-                <h2 class="display-2">
+                <h2 class="display-1">
                   <a href="#" class="text-white">
                     Ready to supercharge your business?
                   </a>
@@ -437,7 +438,7 @@
       </div>
     </section>
     <!-- navigation -->
-    <section class="navigation mt-5">
+    <nav class="navigation mt-5">
       <div class="container">
         <!-- link -->
         <div class="row row-cols-lg-3">
@@ -446,7 +447,7 @@
             <div class="card p-0">
               <div class="card-header mt-3 mt-lg-0">
                 <a href="#" class="logo">
-                  <img src="./img/logo.png" alt="logo">
+                  <img src="./images/logo.png" alt="logo">
                 </a>
               </div>
               <div class="card-body mt-3">
@@ -457,13 +458,13 @@
               <div class="card-footer mt-3">
                 <ul class="d-flex ">
                   <li>
-                    <a class="me-3" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above"></a>
+                    <a class="me-3" href="https://twitter.com/"><img src="./images/media-Twitter.png" alt="Here is a logo of the media above"></a>
                   </li>
                   <li>
-                    <a class="me-3" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above"></a>
+                    <a class="me-3" href="https://www.facebook.com/"> <img src="./images/media-Facebook.png" alt="Here is a logo of the media above"></a>
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above"></a>
+                    <a href="https://www.linkedin.com/"> <img src="./images/media-Linkedin.png" alt="Here is a logo of the media above"></a>
                   </li>
                 </ul>
               </div>
@@ -542,7 +543,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </nav>
   </footer>
   <!-------------------
        footer end
