--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
+
 <body>
-    <p>hello</p>
+
+    <div class="container">
+        <form class="w-50">
+            <div class="form-group">
+                <input type="number" class="form-control" id="inpToan" placeholder="Nhập điểm Toán">
+            </div>
+            <div class="form-group">
+                <input type="number" class="form-control" id="inpLy" placeholder="Nhập điểm Lý">
+            </div>
+            <div class="form-group">
+                <input type="number" class="form-control" id="inpHoa" placeholder="Nhập điểm Hóa">
+            </div>
+            <button type="button" id="btnTinh" class="btn btn-success">Xếp loại</button>
+            <p id="txtThongBao" class="alert alert-danger" ></p>
+        </form>
+    </div>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
+
+    <!-- <script src="./js/demoToanTu.js"></script> -->
+    <script src="./js/demoDieukien.js"></script>
 </body>
+
 </html>
