Add folder Big-Exercise

--- a/javascript/Big-Exercise/index.html
+++ b/javascript/Big-Exercise/index.html
@@ -83,7 +83,7 @@
 
 				<div class="wrap-contact100-form-btn">
 					<div class="contact100-form-bgbtn"></div>
-					<button onclick="tinhTongTien()" type="button" class="contact100-form-btn">
+					<button id="btnmoneyPay" type="button" class="contact100-form-btn">
 						TÍNH TIỀN
 					</button>
 				</div>
